Fixed login/register buttons on mobile

--- a/client/src/pages/Surfel/Surfel.css
+++ b/client/src/pages/Surfel/Surfel.css
@@ -166,3 +166,10 @@
     background-color: rgba(255, 157, 157, 0.735);
     cursor: pointer;
 }
+
+@media only screen and (max-width: 570px) {
+    .user-login-register{
+        bottom: 0;
+    }
+}
+
